RESOLVED FIXED Bug 41998
Fix SVG tag name casing for HTMLTreeBuilder
https://bugs.webkit.org/show_bug.cgi?id=41998
Summary Fix SVG tag name casing for HTMLTreeBuilder
Eric Seidel (no email)
Reported 2010-07-09 15:17:35 PDT
Fix SVG tag name casing for HTMLTreeBuilder
Attachments
Patch (22.65 KB, patch)
2010-07-09 15:21 PDT, Eric Seidel (no email)
abarth: review+
abarth: commit-queue+
Eric Seidel (no email)
Comment 1 2010-07-09 15:21:36 PDT
Adam Barth
Comment 2 2010-07-09 15:25:10 PDT
Comment on attachment 61108 [details] Patch We need to fix the names #ifdef problem. Is this going to break non-default configurations?
Eric Seidel (no email)
Comment 3 2010-07-09 15:29:55 PDT
Eric Seidel (no email)
Comment 4 2010-07-09 15:31:56 PDT
yes, it will. We need to fix the SVGNames generation problem in general.
Note You need to log in before you can comment on or make changes to this bug.